# cublas-magma-pybind11

./: CMakeLists.txt  README.md  testAmulB.py  testCholesky.py  testSolver.py
src/: gpu_library.cpp  gpu_library.cu
